--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   get: ^4.7.2
   provider: ^6.1.5
   flutter_animate: ^4.5.2
+  carousel_slider: ^5.1.1
+  shimmer_animation: ^2.2.2
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
