--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,8 +45,9 @@ dependencies:
   provider: ^6.1.5
   flutter_animate: ^4.5.2
   carousel_slider: ^5.1.1
-  shimmer_animation: ^2.2.2
   shimmer: ^3.0.0
+  url_launcher: ^6.3.2
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
