--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,12 @@ dependencies:
   shimmer: ^3.0.0
   url_launcher: ^6.3.2
   shared_preferences: ^2.5.3
+  image_picker: ^1.1.2
+  http: ^1.5.0
+  flutter_image_compress: ^2.4.0
+  cross_file: ^0.3.4+2
+  image: ^4.5.4
+  flutter_slidable: ^4.0.0
 
 dev_dependencies:
   flutter_test:
