--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   cross_file: ^0.3.4+2
   image: ^4.5.4
   flutter_slidable: ^4.0.0
+  dio: ^5.9.0
 
 dev_dependencies:
   flutter_test:
