--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   image: ^4.5.4
   flutter_slidable: ^4.0.0
   dio: ^5.9.0
+  flutter_svg: ^2.2.0
 
 dev_dependencies:
   flutter_test:
