--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,8 @@ dependencies:
   flutter_slidable: ^4.0.0
   dio: ^5.9.0
   flutter_svg: ^2.2.0
+  fl_chart: ^0.71.0
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
