--- a/web/manifest.json
+++ b/web/manifest.json
@@ -3,11 +3,8 @@
   "short_name": "MobiStore",
   "start_url": ".",
   "display": "standalone",
-  "background_color": "#1A2530",
-  "theme_color": "#1A2530",
-  "description": "Mobil telefon va aksessuarlarni boshqarish uchun ilova.",
-  "orientation": "portrait-primary",
-  "prefer_related_applications": false,
+  "background_color": "#ffffff",
+  "theme_color": "#6200EE",
   "icons": [
     {
       "src": "icons/Icon-192.png",
@@ -18,18 +15,6 @@
       "src": "icons/Icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
-    },
-    {
-      "src": "icons/Icon-maskable-192.png",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "maskable"
-    },
-    {
-      "src": "icons/Icon-maskable-512.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "maskable"
     }
   ]
 }
